@@ -16,15 +16,39 @@ const char* JPy_AsUTF8_PriorToPy33(PyObject* pyStr)
     return PyString_AsString(pyStr);
 }
 
-// todo - py27: interim solution: JPy_AsWideCharString_PriorToPy33() is not correctly implemented, this is just for compatibility testing
 wchar_t* JPy_AsWideCharString_PriorToPy33(PyObject* pyUnicode, Py_ssize_t* size)
 {
-    static wchar_t buffer[4096];
+    wchar_t* buffer = NULL;
+    PyObject* pyNewRef = NULL;
 
     if (!PyUnicode_Check(pyUnicode)) {
-        pyUnicode = PyUnicode_FromObject(pyUnicode);
+        pyNewRef = PyUnicode_FromObject(pyUnicode);
+        if (pyNewRef == NULL) {
+            goto error;
+        }
+        pyUnicode = pyNewRef;
     }
-    *size = PyUnicode_AsWideChar((PyUnicodeObject*) pyUnicode, buffer, 4096);
+
+    *size = PyUnicode_GET_SIZE(pyUnicode);
+    if (*size < 0) {
+        goto error;
+    }
+
+    buffer = PyMem_New(wchar_t, *size);
+    if (buffer == NULL) {
+        goto error;
+    }
+
+    *size = PyUnicode_AsWideChar((PyUnicodeObject*) pyUnicode, buffer, *size);
+    if (*size < 0) {
+        PyMem_Free(buffer);
+        buffer = NULL;
+    }
+
+error:
+
+    Py_XDECREF(pyNewRef);
+
     return buffer;
 }
 
